fixed csv export + loading bar visibilty duration increased

--- a/docs/Coding_Assignment/Task/frame-app/src/pages/screen.scss
+++ b/docs/Coding_Assignment/Task/frame-app/src/pages/screen.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     width:100%;
     height: 100%;
-    overflow:auto;
+    overflow:hidden;
 }
 
 .dropzone{
@@ -25,4 +25,13 @@
 
     margin-top:100px;
 
+}
+
+.loading{
+    width:100%;
+    height: 100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+   
 }
